# input-mixer

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md
.github/workflows/: ci.yml  windows-build.yml
cmake/: BuildRust.cmake  Dependencies.cmake
crates/input-mixer-core/: Cargo.toml  build.rs
crates/input-mixer-core/src/: ffi.rs  ffi_bridge.rs  lib.rs
crates/input-mixer-core/src/capture/: hardware.rs  mod.rs  monitor_ring.rs  platform.rs
crates/input-mixer-core/src/capture/linux/: mod.rs  pipewire.rs
crates/input-mixer-core/src/capture/macos/: aggregate_device.mm  hal.rs  hal_devices.mm  mod.rs  sck.rs  sck_shim.mm
crates/input-mixer-core/src/capture/windows/: loopback.rs  mod.rs
crates/input-mixer-core/src/engine/: limiter.rs  mixer_engine.rs  mod.rs
crates/input-mixer-core/src/sources/: mod.rs  registry.rs  source_id.rs
drivers/macos/: README.md
drivers/windows/: README.md
installer/macos/: build-pkg.sh  create-dev-pkg.sh
installer/windows/: build-msi.sh
scripts/: build.sh  verify.sh
shell/: AppConfig.h  CMakeLists.txt  Main.cpp
shell/app/: DriverInstaller.cpp  DriverInstaller.h  FirstRunWizard.cpp  FirstRunWizard.h  InputMixerApplication.cpp  InputMixerApplication.h  MainWindow.cpp  MainWindow.h  SettingsStore.cpp  SettingsStore.h
shell/bridge/: CxxString.h  RustBridge.cpp  RustBridge.h  SourceMatching.cpp  SourceMatching.h
shell/macos/: InfoPlistAdditions.plist
shell/ui/: ChannelStripComponent.cpp  ChannelStripComponent.h  DesignModePanel.cpp  DesignModePanel.h  FontAudioIcons.cpp  FontAudioIcons.h  LevelMeterComponent.cpp  LevelMeterComponent.h  MasterStripComponent.cpp  MasterStripComponent.h  MixerLookAndFeel.cpp  MixerLookAndFeel.h  MixerTheme.cpp  MixerTheme.h  MonitorStripComponent.cpp  MonitorStripComponent.h
